
2397.	[bug]		gssapi_functions had too many elements. [RT #18355]

2396.	[bug]		Don't set SO_REUSEADDR for randomized ports.
			[RT #18336]

2395.	[port]		Avoid warning and no effect from "files unlimited"
			on Linux when running as root. [RT #18335]

2394.	[bug]		Default configuration options set the limit for
			open files to 'unlimited' as described in the
			documentation. [RT #18331]

	--- 9.5.0-P1 released ---

2375.   [security]      Fully randomize UDP query ports to improve
			forgery resilience. [RT #17949]

	--- 9.5.0 released ---

2374.   [bug]           "blackhole" ACLs could cause named to segfault due
			to some uninitialized memory. [RT #18095]

2372.   [bug]           fixed incorrect TAG_HMACSHA256_BITS value [RT #18047]

2371.   [doc]           add +nsid option to dig man page. [RT #18039]

2370.   [bug]           "rndc freeze" could trigger an assertion in named
                        when called on a nonexistent zone. [RT #18050]

	--- 9.5.0rc1 released ---

2368.   [port]          Linux: use libcap for capability management if
                        possible. [RT# 18026]

2367.   [bug]           Improve counting of dns_resstatscounter_retry
                        [RT #18030]

2366.	[bug]		Adb shutdown race. [RT #18021]

2365.   [bug]           Fix a bug that caused dns_acl_isany() to return
                        spurious results. [RT #18000]

2364.	[bug]		named could trigger a assertion when serving a
			malformed signed zone. [RT #17828]

2363.	[port]		sunos: pre-set "lt_cv_sys_max_cmd_len=4096;".
			[RT #17513]

2362.   [cleanup]       Make "rrset-order fixed" a compile-time option.
                        settable by "./configure --enable-fixed-rrset".
                        Disabled by default. [RT #17977]

2361.	[bug]		"recursion" statistics counter could be counted
			multiple times for a single query.  [RT #17990]

	--- 9.5.0b3 released ---

2360.	[bug]		Fix a condition where we release a database version