@@ -14,6 +14,9 @@
 			open files to 'unlimited' as described in the
 			documentation. [RT #18331]
 
+2387.	[bug]		Silence compiler warnings in lib/isc/radix.c.
+			[RT #18147] [RT #18258]
+
 	--- 9.5.0-P1 released ---
 
 2375.   [security]      Fully randomize UDP query ports to improve
